<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="homeViewModel"
            type="com.example.mypokemonapp.screens.home.HomeViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".screens.home.HomeFragment">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pokemon_characters"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="@color/purple_500"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="5dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="5dp" />

            <ImageView
                android:id="@+id/searchBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_search_24"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp" />
            <TextView
                android:id="@+id/uploadFragmentLink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/upload"
                android:layout_marginStart="20dp"
                android:textAllCaps="true"
                android:layout_marginEnd="20dp" />

        </androidx.appcompat.widget.Toolbar>

        <LinearLayout
            android:id="@+id/searchBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="10dp"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/pokemonOffsetQty"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:hint="@string/starting_position"
                android:inputType="number" />

            <EditText
                android:id="@+id/pokemonLimitQty"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:hint="@string/quantity_to_load"
                android:inputType="number"/>

            <ImageView
                android:id="@+id/makeRequest"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:src="@drawable/ic_baseline_search_24"/>

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/pokemonGridView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:itemCount="16"
            app:layout_constraintTop_toBottomOf="@id/searchBox"
            app:spanCount="2"
            app:listData="@{homeViewModel.root}"
            tools:listitem="@layout/pokemon_list_view"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
