<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="detailsViewModel"
            type="com.example.mypokemonapp.screens.details.PokemonDetailsViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#CDC3C3"
        tools:context=".screens.details.PokemonDetailsFragment">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/detailsToolBarParent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/detailsToolBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{detailsViewModel.selectedResult.name}"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:textSize="27sp"
                    android:hint="@string/pokemon"/>

            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.AppBarLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/detailsToolBarParent">

            <LinearLayout
                android:id="@+id/viewsContainer"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/pokemonImage"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:visibility="visible"
                    app:layout_constraintHorizontal_bias="0.498"
                    app:layout_constraintStart_toStartOf="parent"
                    app:imageUrl="@{detailsViewModel.selectedResult.imgUrl}"
                    />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/heightTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/height"
                        android:textStyle="bold"
                        android:textSize="18sp"
                        android:layout_marginEnd="10dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:layout_marginRight="10dp" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="76"
                        android:text="@{Integer.toString(detailsViewModel.pokemon.height)}"
                        android:textSize="18sp"
                        app:layout_constraintStart_toEndOf="@id/heightTitle"
                        app:layout_constraintTop_toTopOf="parent"/>
                    <TextView
                        android:id="@+id/weight"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="46"
                        android:text="@{Integer.toString(detailsViewModel.pokemon.weight)}"
                        android:textSize="18sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"/>

                    <TextView
                        android:id="@+id/weightTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:text="@string/weight"
                        android:textStyle="bold"
                        android:textSize="18sp"
                        app:layout_constraintEnd_toStartOf="@id/weight"
                        app:layout_constraintTop_toTopOf="parent"
                        android:layout_marginRight="10dp" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <GridLayout
                    android:id="@+id/galleryGrid"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:columnCount="4"
                    android:padding="10dp"
                    android:rowCount="2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5">

                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_margin="5dp"
                        android:background="@drawable/img_bg"
                        app:imageUrl="@{detailsViewModel.pokemon.sprites.back_default}"/>

                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_margin="5dp"
                        android:background="@drawable/img_bg"
                        app:imageUrl="@{detailsViewModel.pokemon.sprites.back_female}"/>

                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_margin="5dp"
                        android:background="@drawable/img_bg"
                        app:imageUrl="@{detailsViewModel.pokemon.sprites.back_shiny}"/>

                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_margin="5dp"
                        android:background="@drawable/img_bg"
                        app:imageUrl="@{detailsViewModel.pokemon.sprites.back_shiny_female}"/>

                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_margin="5dp"
                        android:background="@drawable/img_bg"
                        app:imageUrl="@{detailsViewModel.pokemon.sprites.front_default}"/>

                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_margin="5dp"
                        android:background="@drawable/img_bg"
                        app:imageUrl="@{detailsViewModel.pokemon.sprites.front_female}"/>

                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_margin="5dp"
                        android:background="@drawable/img_bg"
                        app:imageUrl="@{detailsViewModel.pokemon.sprites.front_shiny}"/>

                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_margin="5dp"
                        android:background="@drawable/img_bg"
                        app:imageUrl="@{detailsViewModel.pokemon.sprites.front_shiny_female}"/>

                </GridLayout>

                <TextView
                    android:id="@+id/movesTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#41FFFFFF"
                    android:fontFamily="@font/arbutus"
                    android:gravity="start"
                    android:paddingStart="10dp"
                    android:text="@string/moves"
                    android:textSize="20sp"
                    android:textColor="#E8131313"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/galleryGrid"
                    android:paddingLeft="10dp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/movesRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                    app:spanCount="3"
                    tools:itemCount="10"
                    android:background="#41FFFFFF"
                    app:movesList="@{detailsViewModel.pokemon.moves}"
                    tools:listitem="@layout/moves_item_view"
                    android:paddingVertical="10dp"
                    app:layout_constraintTop_toBottomOf="@id/movesTitle"/>

                <TextView
                    android:id="@+id/abilityTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#41FFFFFF"
                    android:fontFamily="@font/arbutus"
                    android:gravity="start"
                    android:paddingStart="10dp"
                    android:text="@string/abilities"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/galleryGrid"
                    android:paddingLeft="10dp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/abilityRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                    app:spanCount="3"
                    android:background="#41FFFFFF"
                    app:abilityList="@{detailsViewModel.pokemon.abilities}"
                    tools:listitem="@layout/ability_item_view"
                    android:paddingVertical="10dp"/>

            </LinearLayout>

        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>

